# data-structures

./: .gitignore  LICENSE  README.md  data-structures.cabal
app/: Main.hs
src/: Dequeue.hs  Queue.hs  Stack.hs
